...

  // ── Application ──
  static const String appName = 'PAP (PAYPOINT)';
  static const String appTagline = 'Secure. Fast. Effortless.';

  // ── Authentification ──
  static const String login = 'Login';
  static const String logout = 'Logout';
  static const String email = 'Email Address';
  static const String password = 'Password';
  static const String forgotPassword = 'Forgot Password?';
  static const String useBiometrics = 'Use Biometrics';
  static const String noAccount = "Don't have an account?";
...
